# nosocial-protocol

./: README.md  package-lock.json  package.json  railway.toml
docs/: CNAME  index.html  llms-full.txt  llms.txt  style.css
docs/extensions/agent-profile/: index.html  spec.md
integrations/crewai/: .gitignore  README.md  pyproject.toml
integrations/crewai/nosocial_crewai/: __init__.py  identity.py  reporter.py
integrations/crewai/tests/: test_identity.py  test_reporter.py
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  oracle-client.ts
oracle/: .dockerignore  Dockerfile  package-lock.json  package.json  railway.toml  tsconfig.json
oracle/src/: index.ts  instrument.ts
oracle/src/crypto/: signing.ts
oracle/src/db/: index.ts  schema.ts
oracle/src/routes/: agents.ts  reports.ts
oracle/src/services/: agents.ts  reports.ts  reputation.ts
oracle/test/: oracle.test.ts
site/: BUILD.md  build.js
spec/: agent-profile-extension.md
spec/schemas/: agent-profile.schema.json  interaction-report.schema.json
