[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nosocial-crewai"
version = "0.1.0"
description = "NoSocial reputation reporting for CrewAI — auto-reports agent interactions to the NoSocial oracle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "NoSocial", email = "hello@nosocial.me" },
]
keywords = ["nosocial", "crewai", "agent", "reputation", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "crewai>=0.80.0",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://nosocial.me"
Repository = "https://github.com/pcdkd/nosocial-protocol"
Specification = "https://nosocial.me/extensions/agent-profile"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
]
